--- a/libs/core/src/lib/components/item/item.component.scss
+++ b/libs/core/src/lib/components/item/item.component.scss
@@ -1,3 +1,9 @@
+:host[color="none"] {
+  ion-label {
+    color: var(--ion-color-primary-contrast);
+  }
+}
+
 :host {
   --silicia-color-selected: rgba(var(--ion-color-primary-rgb), 0.14);
   --silicia-border-radius: 50px;
@@ -54,18 +60,20 @@
     --color: var(--ion-color-medium);
     --color-selected: var(--ion-color-primary);
     min-width: 300px;
-  
+
     &::before {
       background-color: transparent;
       display: block;
-      content: "";
+      content: '';
       margin: 0 auto;
       width: 64px;
       height: 2px;
     }
-  
+
     &.tab-selected::before {
       background-color: var(--ion-color-primary);
     }
   }
+
+  
 }
