--- a/libs/core/src/lib/components/menu/menu.component.html
+++ b/libs/core/src/lib/components/menu/menu.component.html
@@ -41,7 +41,7 @@
         [style]="this.style"
         [tabbed]="false"
         [badge]="item.value.badge!"
-        color="primary"
+        [color]="this.color"
       >
       </sio-menu-item>
     </ion-list>
