--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -1,4 +1,5 @@
-<sio-app [environmentInjector]="environmentInjector"
+<sio-app
+  [environmentInjector]="environmentInjector"
   title="Demo"
   leftPanelType="push"
   righPanelType="none"
@@ -7,6 +8,5 @@
   tabMobilePosition="bottom"
   color="primary"
 >
-  
   <sio-darkmode-toggle slot="left_footer"></sio-darkmode-toggle>
 </sio-app>
