fix auth module

--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -8,5 +8,6 @@
   tabMobilePosition="bottom"
   color="primary"
 >
+  <sio-auth-badge slot="left_header"></sio-auth-badge>
   <sio-darkmode-toggle slot="left_footer"></sio-darkmode-toggle>
 </sio-app>
