add some stuff in demo page

--- a/apps/demo/src/app/info/info.page.html
+++ b/apps/demo/src/app/info/info.page.html
@@ -1,1 +1,11 @@
-<sio-page title="info"></sio-page>
+<sio-page title="info">
+    <sio-card title="INVOICES" color="secondary" subtitle="data: totale: 100000" value="open">
+        <ion-button>Invio</ion-button>
+    </sio-card>
+    <sio-card title="REMINDER" color="warning" value="open">
+        <ion-button>Invio</ion-button>
+    </sio-card>
+    <sio-card title="MARKETING" color="danger" value="open">
+        <ion-button>Invio</ion-button>
+    </sio-card>
+</sio-page>
