--- a/apps/demo/src/app/info/info.page.html
+++ b/apps/demo/src/app/info/info.page.html
@@ -1,7 +1,25 @@
 <sio-page title="info">
-    <sio-card title="INVOICES" color="secondary" subtitle="data: totale: 100000" value="open">
-        <ion-button>Invio</ion-button>
-    </sio-card>
+    
+        <ion-card class="ion-text-center" >
+            <ion-card-header>
+              <ion-card-title>Choose Images to Upload</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-button color="primary" size="medium">
+                <input type="file"  />
+              </ion-button>
+            </ion-card-content>
+          </ion-card>
+          <!-- File upload progress bar -->
+          <div >
+            Progress: {{ 10 }}%
+            <ion-progress-bar value="{{ 10 / 100 }}"></ion-progress-bar>
+          </div>
+          <div >
+            File size: {{ 100  }} Data transfered: {{
+            1000}}
+          </div>
+   
     <sio-card title="REMINDER" color="warning" value="open">
         <ion-button>Invio</ion-button>
     </sio-card>
