another step forward

--- a/apps/demo/src/app/info/info.page.html
+++ b/apps/demo/src/app/info/info.page.html
@@ -1,3 +1,4 @@
 <sio-page title="info">
-  <sio-input caption="file da inviare" type="file">Invio</sio-input>
+  <sio-form [state]="this.siliciaInfoFormState" (send)="this.uploadImage()">
+  </sio-form>
 </sio-page>
