--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -1,5 +1,19 @@
-<sio-app [environmentInjector]="environmentInjector" title="Demo" leftPanelType="push" righPanelType="none"
-  tabMenuID="main" tabDesktopPosition="left" tabMobilePosition="bottom" color="primary">
+<sio-app
+  [environmentInjector]="environmentInjector"
+  title="Demo"
+  leftPanelType="push"
+  righPanelType="none"
+  tabMenuID="main"
+  tabDesktopPosition="left"
+  tabMobilePosition="bottom"
+  color="primary"
+>
   <sio-auth-badge slot="left_header" size="large"></sio-auth-badge>
+  <br slot="left_header" />
+  <ion-item slot="left_header">
+    <ion-toggle [enableOnOffLabels]="true" justify="space-between"
+      >Invia Notifiche</ion-toggle
+    ></ion-item
+  >
   <sio-darkmode-toggle slot="left_footer"></sio-darkmode-toggle>
 </sio-app>
