--- a/apps/demo/src/app/home/home.page.html
+++ b/apps/demo/src/app/home/home.page.html
@@ -1,3 +1,66 @@
 <sio-page title="Home">
-    
-</sio-page>   
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <sio-card color="secondary" title="clienti">
+          <div class="ion-text-center">
+            <br />
+            <ion-text color="danger">
+              <h1><b>{{ this.siliciaHomePageState.customers }}</b></h1>
+            </ion-text>
+          </div>
+        </sio-card>
+      </ion-col>
+      <ion-col>
+        <sio-card color="secondary" title="Agenti">
+          <div class="ion-text-center">
+            <br />
+            <ion-text color="danger">
+              <h1><b>{{ this.siliciaHomePageState.agents }}</b></h1>
+            </ion-text>
+          </div>
+        </sio-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <sio-card
+          color="secondary"
+          title="Fatture"
+          [subtitle]="'Totale Dovuto €. '+ this.siliciaHomePageState.invoices.totals"
+        >
+          <div class="ion-text-center">
+            <br />
+            <ion-text color="danger">
+              <h1><b>{{this.siliciaHomePageState.invoices.number}}</b></h1>
+            </ion-text>
+          </div>
+        </sio-card>
+      </ion-col>
+      <ion-col>
+        <sio-card
+          color="danger"
+          title="Notifiche"
+          [subtitle]="'Totale da Notificare €. '+ this.siliciaHomePageState.notifications.totals"
+        >
+          <div class="ion-text-center">
+            <br />
+            <ion-text color="danger">
+              <h1>
+                <b>{{ this.siliciaHomePageState.notifications.number }}</b>
+              </h1>
+            </ion-text>
+          </div>
+        </sio-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-fab slot="footer" vertical="bottom" horizontal="end">
+    <sio-button type="fab" icon="add"></sio-button>
+    <ion-fab-list side="top">
+      <sio-button type="fab" icon="logo-euro" size="small" upload (Click)="this.uploadINVOICES($event)"></sio-button>
+      <!--// <sio-button type="fab" icon="notifications" size="small"></sio-button> //-->
+      <sio-button type="fab" icon="car" size="small" upload (Click)="this.uploadMKT($event)"></sio-button>
+    </ion-fab-list>
+  </ion-fab>
+</sio-page>
