--- a/libs/auth/src/lib/components/badge/badge.component.html
+++ b/libs/auth/src/lib/components/badge/badge.component.html
@@ -31,7 +31,7 @@
         </ion-item>
         <div class="ion-padding" slot="content">
           <sio-menu menuID="logged"></sio-menu>
-          <sio-menu-item (click)="test()">Load</sio-menu-item>
+          <sio-button block color="danger" icon="exit">Esci</sio-button>
         </div>
       </ion-accordion>
     </ion-accordion-group>
