--- a/libs/core/src/lib/components/icon/icon.component.html
+++ b/libs/core/src/lib/components/icon/icon.component.html
@@ -1,1 +1,2 @@
-<ion-icon [slot]="this.slot" [name]="this.name" [ios]="this.name+ '-outline'" [md]="this.name+ '-sharp'" [color]="this.color" [size]="this.size"></ion-icon>
+<ion-icon *ngIf="this.slot === 'start'" slot="start" [name]="this.name" [ios]="this.name+ '-outline'" [md]="this.name+ '-sharp'" [color]="this.color" [size]="this.size"></ion-icon>
+<ion-icon *ngIf="this.slot === 'end'" slot="end" [name]="this.name" [ios]="this.name+ '-outline'" [md]="this.name+ '-sharp'" [color]="this.color" [size]="this.size"></ion-icon>
