add store in storage library

--- a/apps/demo/src/app/buttons/buttons.page.html
+++ b/apps/demo/src/app/buttons/buttons.page.html
@@ -1,7 +1,7 @@
 <sio-page title="buttons">
     <ion-text>
         Example of minimal button
-        <div type="text/html"><sio-button>Standard</sio-button></div>
+        <pre><code><sio-button>Standard</sio-button></code></pre>
     </ion-text>
     <br />
     <sio-button>Standard</sio-button>
