--- a/apps/demo/src/app/info/info.page.html
+++ b/apps/demo/src/app/info/info.page.html
@@ -1,24 +1,4 @@
 <sio-page title="info">
-  <sio-form [state]="this.siliciaInfoFormState1" (send)="this.uploadFile1()" [cancel]="true">
-  </sio-form>
-  <sio-form [state]="this.siliciaInfoFormState2" (send)="this.uploadFile2()" [cancel]="true">
-  </sio-form>
-  <sio-form [state]="this.siliciaInfoFormState3" (send)="this.uploadFile3()" [cancel]="true">
-  </sio-form>
-  <ion-fab slot="footer" vertical="bottom" horizontal="end">
-    <ion-fab-button mini color="danger">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="top">
-      <ion-fab-button>
-        <ion-icon name="logo-euro"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="notifications"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="car"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
+  <sio-button (Click)="this.test()">TEST</sio-button>
+  <h1>{{ this.sioStorageState }}</h1>
 </sio-page>
