--- a/apps/demo/src/app/info/info.page.html
+++ b/apps/demo/src/app/info/info.page.html
@@ -1,4 +1,13 @@
-<sio-page title="info">
-  <sio-button (Click)="this.test()">TEST</sio-button>
-  <h1>{{ this.sioStorageState }}</h1>
+<sio-page title="Storage Apprite Plugin Test Page">
+  <sio-button upload (Click)="this.upload($event)">LOAD</sio-button>
+  <sio-button color="danger" (Click)="this.delete('all')">DELETE ALL</sio-button>
+  <h1>{{ this.sioStorageState.totals }}</h1>
+  
+  <ion-list>
+    @for (file of sioStorageState.files; track file) {
+    <ion-item>
+      <ion-label>{{ file.name }}</ion-label><sio-button slot="end">Delete</sio-button> </ion-item
+    >
+  }
+  </ion-list>
 </sio-page>
