Add first integration in sio-list component with the database component

--- a/apps/demo/src/app/database/database.page.html
+++ b/apps/demo/src/app/database/database.page.html
@@ -3,13 +3,5 @@
   <sio-button color="danger" (Click)="this.deleteAll()" [disabled]="!this.taskState.localTotals">DELETE
     ALL</sio-button>
   <h1>Total Task : {{ this.taskState.localTotals }} loaded /{{ this.taskState.remoteTotals }} on server</h1>
-
-  <ion-list>
-    @for (file of taskState.selectAll(); track file) {
-    <ion-item>
-      <ion-label>{{ $any(file).name }}</ion-label>
-      <ion-note>{{ $any(file).description }}</ion-note>
-    </ion-item>
-    }
-  </ion-list>
+  <sio-list header="name" label="description" [data]="this.taskState.selectAll()" avatar="photo" thumbnail="photo2"></sio-list>
 </sio-page>
