--- a/libs/core/src/lib/components/list/list.component.html
+++ b/libs/core/src/lib/components/list/list.component.html
@@ -1,5 +1,6 @@
-<ng-template>
   <ion-list>
-    <sio-item label="test" image="" alt="test"></sio-item>
+    <sio-item *ngFor="
+    let item of this.data;
+    trackBy: trackItems
+  " [header]="item[this.header]" [label] = "item[this.label]" [thumbnail]="this.thumbnail" [image]="(this.avatar)?item[this.avatar]:(this.thumbnail)?item[this.thumbnail]:''"></sio-item>
   </ion-list> 
-</ng-template>
