--- a/libs/core/src/lib/components/item/item.component.html
+++ b/libs/core/src/lib/components/item/item.component.html
@@ -1,22 +1,22 @@
 <ion-item-sliding [disabled]="this.disabled">
   <ion-item-options *ngIf="this.doRightSwipe" side="start" (ionSwipe)="this.RightSwipe()">
     <ion-item-option color="success" expandable>
-      <ion-icon slot="icon-only" name="archive"></ion-icon>
+      <sio-icon slot="icon-only" name="archive"></sio-icon>
     </ion-item-option>
   </ion-item-options>
   <ion-item button="this.button" color="none">
-    <ion-avatar *ngIf="this.image && this.avatar" slot="start">
-      <ion-img [alt]="this.alt" [src]="this.image" />
+    <sio-icon *ngIf="this.icon" name="this.icon" slot="start"></sio-icon>
+    <ion-avatar *ngIf="this.avatar" slot="start">
+      <ion-img [alt]="this.alt" [src]="this.avatar" />
     </ion-avatar>
-    <ion-thumbnail *ngIf="this.image && this.thumbnail" slot="start">
-      <ion-img [alt]="this.alt" [src]="this.image" />
+    <ion-thumbnail *ngIf="this.thumbnail" slot="start">
+      <ion-img [alt]="this.alt" [src]="this.thumbnail" />
     </ion-thumbnail>
     <ion-label><h2>{{ this.header | translate }}</h2><p>{{ this.label | translate }}</p></ion-label>
-    <ion-label slot="end"></ion-label>
-    <ion-button slot="end"><sio-icon name="add"></sio-icon></ion-button>
+    <div slot="end"></div>
   </ion-item>
-  <ion-item-options  *ngIf="this.doLeftSwipe" side="end" (ionSwipe)="this.LeftSwipe()">
+  <ion-item-options *ngIf="this.doLeftSwipe" side="end" (ionSwipe)="this.LeftSwipe()">
     <ion-item-option color="danger" expandable>
-      <ion-icon slot="icon-only" name="trash"></ion-icon>
+      <sio-icon slot="icon-only" name="trash"></sio-icon>
     </ion-item-option>
   </ion-item-options>
