--- a/apps/demo/src/app/database/database.page.html
+++ b/apps/demo/src/app/database/database.page.html
@@ -1,10 +1,4 @@
-<sio-page title="Database Apprite Plugin Test Page">
-  <sio-button
-    color="danger"
-    (Click)="this.deleteAll()"
-    [disabled]="!this.taskState.localTotals"
-    >DELETE ALL</sio-button
-  >
+<sio-page title="DATABASE DEMO">
   <h1>
     Total Task : {{ this.taskState.localTotals }} loaded /{{
     this.taskState.remoteTotals }} on server
