--- a/libs/core/src/lib/components/list/list.component.html
+++ b/libs/core/src/lib/components/list/list.component.html
@@ -1,15 +1,17 @@
-<ion-list>
-  <sio-item
-    *ngFor="let item of this.data; trackBy: trackItems"
-    [$id] = "item['$id']"
-    [header]="item[this.header]"
-    [label]="item[this.label]"
-    [thumbnail]="(this.thumbnail)?item[this.thumbnail]:undefined"
-    [avatar]="(this.avatar)?item[this.avatar]:undefined"
-    [icon]="(this.icon)?item[this.icon]:undefined"
-    [LeftSwipe]="this.LeftSwipe"
-    [RightSwipe]="this.RightSwipe"
-    (sioCoreItemLeftSwipe)="this.receiveListRighSwipe($event)"
-    (sioCoreItemRightSwipe)="this.receiveListLeftSwipe($event)"
-  ></sio-item>
-</ion-list> 
+
+    <ion-list>
+      <sio-item
+        *ngFor="let item of this.data"
+        [$id]="item['$id']"
+        [header]="item[this.header]"
+        [label]="item[this.label]"
+        [thumbnail]="this.thumbnail ? item[this.thumbnail] : undefined"
+        [avatar]="this.avatar ? item[this.avatar] : undefined"
+        [icon]="this.icon ? item[this.icon] : undefined"
+        [LeftSwipe]="this.LeftSwipe"
+        [RightSwipe]="this.RightSwipe"
+        (sioCoreItemLeftSwipe)="this.receiveListRighSwipe($event)"
+        (sioCoreItemRightSwipe)="this.receiveListLeftSwipe($event)"
+      ></sio-item>
+    </ion-list>
+
