--- a/apps/demo/src/app/database/database.page.html
+++ b/apps/demo/src/app/database/database.page.html
@@ -6,6 +6,7 @@
     avatar="avatar"
     thumbnail="thumbnail"
     LeftSwipe
+    [infinite]="this.taskState.remoteTotals > this.taskState.localTotals"
     (sioCoreListItemLeftSwipe)="this.archive($event)"
     (sioCoreListItemRightSwipe)="this.delete($event)"
     (sioCoreListInfinite)="this.load($event)"
