--- a/libs/core/src/lib/components/list/list.component.html
+++ b/libs/core/src/lib/components/list/list.component.html
@@ -11,7 +11,7 @@
     (sioCoreItemLeftSwipe)="this.receiveListRighSwipe($event)"
     (sioCoreItemRightSwipe)="this.receiveListLeftSwipe($event)"></sio-item>
 </ion-list>
-<ion-infinite-scroll threshold="10%" (ionInfinite)="this.onListInfinite($event)">
+<ion-infinite-scroll *ngIf="this.infinite" threshold="20%" (ionInfinite)="this.onListInfinite($event)">
   <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
   </ion-infinite-scroll-content>
 </ion-infinite-scroll>
