fix realtime update list

--- a/apps/demo/src/app/database/database.page.html
+++ b/apps/demo/src/app/database/database.page.html
@@ -9,6 +9,7 @@
     (sioCoreListItemLeftSwipe)="this.archive($event)"
     (sioCoreListItemRightSwipe)="this.delete($event)"
     (sioCoreListInfinite)="this.load($event)"
+    (sioRefreshList)="this.refresh($event)"
   ></sio-list>
   <ion-fab slot="footer" vertical="bottom" horizontal="end">
     <sio-button
